--- a/404.md
+++ b/404.md
@@ -2,6 +2,7 @@
 layout: 404
 permalink: /404.html
 title: Welcome to Wikimint Community | Explore new things
+noindex: true
 ---
 
 {% include register404.html %}
